--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,7 +112,8 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "format": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
