I did some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore clangd cache
+.cache/
+
 # Prerequisites
 *.d
 
@@ -54,7 +57,7 @@ Android.mk.backup
 # QPM stuff
 [Ee]xtern/
 *.qmod
-qpm.shared.json
+mod.json
 qpm_defines.cmake
 ![Cc][Mm]ake[Ll]ists.txt
 
@@ -62,3 +65,6 @@ qpm_defines.cmake
 [Bb]uild/
 cmake-build-*/
 extern.cmake
+
+# QMOD Schema
+mod.json.schema
