--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,9 +112,6 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp",
-        "format": "cpp",
-        "stop_token": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "Disabled"
+        "xutility": "cpp"
+    }
 }
